# docscan

./: .gitignore  CMakeLists.txt  README.md  a.py  docscan.cpp  findedge.cpp  imagesizetranform.cpp  main.cpp  ocrtry.cpp
